// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactDetail renders correctly with icon & url 1`] = `
<div
  className="flex group p-2"
>
  <a
    className="u-url where-is-he-now where-did-he-go"
    href="https://myspace.tk/tom"
    rel="me external"
  >
    <div
      className="motion-safe:group-hover:animate-pulse inline-block"
    >
      <svg
        aria-hidden={true}
        className="inline"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zM7 12a5 5 0 0 0 10 0h-2a3 3 0 0 1-6 0H7z"
          />
        </g>
      </svg>
    </div>
    <span
      className="pl-1"
    >
      MySpace
    </span>
  </a>
</div>
`;

exports[`ContactDetail renders correctly with icon but without url 1`] = `
<div
  className="flex group p-2"
>
  <span
    className="u-url where-is-he-now where-did-he-go"
  >
    <div
      className="motion-safe:group-hover:animate-pulse inline-block"
    >
      <svg
        aria-hidden={true}
        className="inline"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zM7 12a5 5 0 0 0 10 0h-2a3 3 0 0 1-6 0H7z"
          />
        </g>
      </svg>
    </div>
    <span
      className="pl-1"
    >
      MySpace
    </span>
  </span>
</div>
`;

exports[`ContactDetail renders correctly without icon and without url 1`] = `
<div
  className="flex group p-2"
>
  <span
    className="u-url where-is-he-now where-did-he-go"
  >
    <span
      className=""
    >
      MySpace
    </span>
  </span>
</div>
`;

exports[`ContactDetail renders correctly without icon but with url 1`] = `
<div
  className="flex group p-2"
>
  <a
    className="u-url where-is-he-now where-did-he-go"
    href="https://myspace.tk/tom"
    rel="me external"
  >
    <span
      className=""
    >
      MySpace
    </span>
  </a>
</div>
`;
